# cpp-factory

./: .gitignore  readme.md
scripts/: cfact
templates/: struct.cpp.mustache  struct.h.mustache  widget.cpp.mustache  widget.h.mustache
tests/struct/: CMakeLists.txt  generator  main.cpp  main_widget.cpp  struct.yaml  toQString.cpp  toQString.h
